--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,10 @@ requires-python = ">=3.13"
 dependencies = [
     "django>=6.0.1",
     "djangorestframework>=3.16.1",
+    "jwt>=1.4.0",
     "pytest-django>=4.11.1",
+    "python-dotenv>=1.2.1",
+    "pytz>=2025.2",
 ]
 
 [dependency-groups]
