--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ requires-python = ">=3.13"
 dependencies = [
     "django>=6.0.1",
     "djangorestframework>=3.16.1",
+    "drf-yasg>=1.21.14",
     "jwt>=1.4.0",
+    "passlib>=1.7.4",
     "pytest-django>=4.11.1",
     "python-dotenv>=1.2.1",
     "pytz>=2025.2",
