+user, role models

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "django example"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "bcrypt>=5.0.0",
     "django>=6.0.1",
     "djangorestframework>=3.16.1",
     "drf-yasg>=1.21.14",
