--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "drf-yasg>=1.21.14",
     "jwt>=1.4.0",
     "passlib>=1.7.4",
+    "pytest-asyncio>=1.3.0",
     "pytest-django>=4.11.1",
     "python-dotenv>=1.2.1",
     "pytz>=2025.2",
@@ -31,9 +32,12 @@ exclude = [
 
 
 [tool.ruff.lint]
-# Extend the default rule selection to include import sorting (I rules)
-extend-select = ["I"]
+extend-select = ["I", "F"]
 fixable = ["I"]
+
+[tool.ruff.lint.isort]
+combine-as-imports = true
 
 [tool.ruff.lint.pycodestyle]
 max-doc-length = 79
+
