--- a/auth_project/requirements.txt
+++ b/auth_project/requirements.txt
@@ -2,6 +2,8 @@
 #    uv export --no-hashes --format requirements-txt
 asgiref==3.11.0
     # via django
+bcrypt==5.0.0
+    # via drf-example
 cffi==2.0.0 ; platform_python_implementation != 'PyPy'
     # via cryptography
 colorama==0.4.6 ; sys_platform == 'win32'
@@ -12,30 +14,67 @@ django==6.0.1
     # via
     #   djangorestframework
     #   drf-example
+    #   drf-yasg
 djangorestframework==3.16.1
+    # via
+    #   drf-example
+    #   drf-yasg
+drf-yasg==1.21.14
     # via drf-example
+ecdsa==0.19.1
+    # via python-jose
+inflection==0.5.1
+    # via drf-yasg
 iniconfig==2.3.0
     # via pytest
 jwt==1.4.0
     # via drf-example
 packaging==26.0
-    # via pytest
+    # via
+    #   drf-yasg
+    #   pytest
+passlib==1.7.4
+    # via drf-example
 pluggy==1.6.0
     # via pytest
+psycopg==3.3.2
+    # via drf-example
+pyasn1==0.6.2
+    # via
+    #   python-jose
+    #   rsa
 pycparser==3.0 ; implementation_name != 'PyPy' and platform_python_implementation != 'PyPy'
     # via cffi
 pygments==2.19.2
     # via pytest
 pytest==9.0.2
-    # via pytest-django
+    # via
+    #   pytest-asyncio
+    #   pytest-django
+pytest-asyncio==1.3.0
+    # via drf-example
 pytest-django==4.11.1
     # via drf-example
 python-dotenv==1.2.1
     # via drf-example
-pytz==2025.2
+python-jose==3.5.0
     # via drf-example
+pytz==2025.2
+    # via
+    #   drf-example
+    #   drf-yasg
+pyyaml==6.0.3
+    # via drf-yasg
+rsa==4.9.1
+    # via python-jose
 ruff==0.14.14
+six==1.17.0
+    # via ecdsa
 sqlparse==0.5.5
     # via django
 tzdata==2025.3 ; sys_platform == 'win32'
-    # via django
+    # via
+    #   django
+    #   psycopg
+uritemplate==4.2.0
+    # via drf-yasg
