--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,11 @@ dependencies = [
     "drf-yasg>=1.21.14",
     "jwt>=1.4.0",
     "passlib>=1.7.4",
+    "psycopg>=3.3.2",
     "pytest-asyncio>=1.3.0",
     "pytest-django>=4.11.1",
     "python-dotenv>=1.2.1",
+    "python-jose>=3.5.0",
     "pytz>=2025.2",
 ]
 
