+token version logic, some settings

--- a/.env_example
+++ b/.env_example
@@ -8,3 +8,4 @@ HOST=localhost
 PORT=5432
 STATIC_PATH=
 # for this project I'm not serving static files (by nginx, for example), so it shows static only in debug mode
+TOKENSECRET=qwerty
